--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 
     <title>Animated Mouse Scroll</title>
   </head>
-  <body></body>
+  <body>
+    <div class="middle">
+      <div class="mouse"></div>
+    </div>
+  </body>
 </html>
